new file:   src/tmx/TmxUtils/src/SNMPClient.cpp 	new file:   src/tmx/TmxUtils/src/SNMPClient.h 	new file:   src/tmx/TmxUtils/src/SNMPClientException.cpp 	new file:   src/tmx/TmxUtils/src/SNMPClientException.h 	modified:   src/v2i-hub/ERVCloudForwardingPlugin/CMakeLists.txt 	modified:   src/v2i-hub/ERVCloudForwardingPlugin/manifest.json 	modified:   src/v2i-hub/ERVCloudForwardingPlugin/src/ERVCloudForwardingPlugin.cpp 	modified:   src/v2i-hub/ERVCloudForwardingPlugin/src/ERVCloudForwardingPlugin.h 	deleted:    src/v2i-hub/ERVCloudForwardingPlugin/src/SNMPClient.cpp 	deleted:    src/v2i-hub/ERVCloudForwardingPlugin/src/SNMPClient.h 	deleted:    src/v2i-hub/ERVCloudForwardingPlugin/src/SNMPClientException.h 	modified:   src/v2i-hub/ERVCloudForwardingPlugin/test/SNMPClientTest.cpp 	modified:   src/v2i-hub/ImmediateForwardPlugin/CMakeLists.txt 	modified:   src/v2i-hub/ImmediateForwardPlugin/manifest.json 	modified:   src/v2i-hub/ImmediateForwardPlugin/src/ImmediateForwardPlugin.cpp 	modified:   src/v2i-hub/ImmediateForwardPlugin/src/ImmediateForwardPlugin.h

--- a/src/v2i-hub/ERVCloudForwardingPlugin/manifest.json
+++ b/src/v2i-hub/ERVCloudForwardingPlugin/manifest.json
@@ -44,10 +44,15 @@
             "description":"SNMP v3 authentication passphrase"
         },
 		{
-            "key":"SecurityUser",
-            "default":"authOnlyUser",
-            "description":"SNMP Security Name"
-        },
+			"key":"SNMPUser",
+			"default":"dummyUser",
+			"description":"SNMP v3 user."
+		},
+		{
+			"key":"SecurityLevel",
+			"default":"authNoPriv",
+			"description":"SNMP Access Control. Usage: noAuthNoPriv, authNoPriv, or authPriv."
+		},
 		{
             "key":"GPSOID",
             "default":"1.0.15628.4.1.8.5.0",
