modified:   src/tmx/Asn_J2735/CMakeLists.txt 	modified:   src/tmx/TmxUtils/src/SNMPClient.cpp 	modified:   src/tmx/TmxUtils/src/SNMPClient.h 	modified:   src/tmx/tmx.doxyfile 	modified:   src/v2i-hub/ImmediateForwardPlugin/manifest.json 	modified:   src/v2i-hub/ImmediateForwardPlugin/src/ImmediateForwardPlugin.cpp 	modified:   src/v2i-hub/ImmediateForwardPlugin/src/ImmediateForwardPlugin.h

--- a/src/v2i-hub/ImmediateForwardPlugin/manifest.json
+++ b/src/v2i-hub/ImmediateForwardPlugin/manifest.json
@@ -86,6 +86,11 @@
       "key":"SecurityLevel",
       "default":"authNoPriv",
       "description":"SNMP Access Control. Usage: noAuthNoPriv, authNoPriv, or authPriv."
+    },
+    {
+      "key":"SNMPVersion",
+      "default":"3",
+      "description":"Set SNMP version to use."
     }
     ]
 }
