--- a/configuration/amd64/docker-compose.yml
+++ b/configuration/amd64/docker-compose.yml
@@ -94,8 +94,8 @@ services:
     ports:
       - 3111:3000
     volumes:
-      - grafana:/var/lib/grafana
-      - ./dashboards:/etc/grafana/provisioning/dashboards/
+      - ./dashboards/dashboard.yaml:/etc/grafana/provisioning/dashboards/main.yaml
+      - ./dashboards:/var/lib/grafana/dashboards
 
 secrets:
     mysql_password:
